--- a/app/Resources/views/_layouts/base.html.twig
+++ b/app/Resources/views/_layouts/base.html.twig
@@ -6,8 +6,14 @@
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="{{ bodyClass|default('') }}">
+        <div class="wrapper">
+            {% block body %}{% endblock %}
+        </div>
+
+
+        <script type="text/javascript" src="/assets/vendor.min.js"></script>
+        <script type="text/javascript" src="/assets/app.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
