ft: webpack config prod and dev

--- a/app/Resources/views/_layouts/base.html.twig
+++ b/app/Resources/views/_layouts/base.html.twig
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body class="{{ bodyClass|default('') }}">
@@ -11,9 +10,5 @@
             {% block body %}{% endblock %}
         </div>
 
-
-        <script type="text/javascript" src="/assets/vendor.min.js"></script>
-        <script type="text/javascript" src="/assets/app.min.js"></script>
-        {% block javascripts %}{% endblock %}
-    </body>
+    <script type="text/javascript" src="/assets/vendor.bundle.js"></script><script type="text/javascript" src="/assets/app.bundle.js"></script></body>
 </html>
