--- a/app/Resources/views/_layouts/default.html.twig
+++ b/app/Resources/views/_layouts/default.html.twig
@@ -21,8 +21,5 @@
 
         </div>
         {% include '_partials/footer.html.twig' %}
-        <script type="text/javascript" src="/assets/vendor.min.js"></script>
-        <script type="text/javascript" src="/assets/app.min.js"></script>
-        {% block javascripts %}{% endblock %}
-    </body>
+    <script type="text/javascript" src="/assets/vendor.bundle.js"></script><script type="text/javascript" src="/assets/app.bundle.js"></script></body>
 </html>
