--- a/app/Resources/views/_partials/header-inner.html.twig
+++ b/app/Resources/views/_partials/header-inner.html.twig
@@ -3,7 +3,7 @@
 </a>
 <a class="item logo" href="/">
     <i class="talk outline icon"></i>
-    Redforma
+    algo
 </a>
 
 <div class="right item">
