--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -13,10 +13,10 @@
 
       <div class="ui text container">
         <h1 class="ui inverted header">
-          Redforma te escucha
+          Algo te escucha
         </h1>
         <h2>Haz valer tus derechos como consumidor</h2>
-        <div class="ui huge black button">Crear Reclamo</div>
+        <div class="ui huge black button">Publicar</div>
       </div>
 
   </div>
