--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -12,7 +12,7 @@
                 Redforma
               </div>
             </h2>
-            <form class="ui large form">
+            <form class="ui large form" method="post">
               <div class="ui noborder segment">
                 <h1>Registrate</h1>
                 <div class="field">
