--- a/app/Resources/views/user/connect.html.twig
+++ b/app/Resources/views/user/connect.html.twig
@@ -39,7 +39,7 @@
                     {% endif %}
                     {{ form_end(form) }}
                     <div class="ui transparent message">
-                        Nuevo en el sitio? <a href="#">Registrate</a>
+                        Nuevo en el sitio? <a href="{{ path('register') }}">Registrate</a>
                     </div>
             </div>
         </div>
