--- a/app/Resources/views/reviews/publication/index.html.twig
+++ b/app/Resources/views/reviews/publication/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '_layouts/default.html.twig' %}
+{% extends '_layouts/base.html.twig' %}
 
 {% block body %}
     <main class="ui main container p20">
