--- a/app/Resources/views/_layouts/base.html.twig
+++ b/app/Resources/views/_layouts/base.html.twig
@@ -4,11 +4,15 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
+        <link rel="stylesheet" href="{{ asset('assets/css/app.css') }}">
+
     </head>
     <body class="{{ bodyClass|default('') }}">
         <div class="wrapper">
             {% block body %}{% endblock %}
         </div>
-
-    <script type="text/javascript" src="/assets/vendor.bundle.js"></script><script type="text/javascript" src="/assets/app.bundle.js"></script></body>
+    </body>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
 </html>
