--- a/app/Resources/views/_layouts/default.html.twig
+++ b/app/Resources/views/_layouts/default.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        
     </head>
     <body class="{{ bodyClass|default('') }}">
         <div class="wrapper">
@@ -21,5 +22,5 @@
 
         </div>
         {% include '_partials/footer.html.twig' %}
-    <script type="text/javascript" src="/assets/vendor.bundle.js"></script><script type="text/javascript" src="/assets/app.bundle.js"></script></body>
+    </body>
 </html>
