--- a/app/Resources/views/reviews/company/index.html.twig
+++ b/app/Resources/views/reviews/company/index.html.twig
@@ -1,52 +1,30 @@
 {% extends '_layouts/base.html.twig' %}
 
-{% set bodyClass = 'app-home' %}
-
 {% block body %}
-    <div class="ui inverted vertical splash center aligned segment main-header">
-
-        <div class="ui container">
-            <div class="ui large secondary inverted menu">
-                {% include '_partials/header-inner.html.twig' %}
-            </div>
-        </div>
-    </div>
-
-    <main>
-        <div style="background:#eee;">
-            <div class="ui container p20">
-                <div class="ui large header">Empresas</div>
-                <span>Listado completo de todas las empresas registradas en <b>Redforma</b></span>
-
-                {# cards #}
-                <div class="ui link four cards p20">
-                    {% for company in companies %}
-                        <div class="card">
-                            <div class="medium image">
-                                <img src="http://lorempixel.com/400/200">
-                            </div>
-                            <div class="content">
-                                <div class="mini header">{{ company.name }}</div>
-                                <div class="meta">
-                                    <span class="date">
-                                        {{ company.prettyCategories }}
-                                    </span>
-                                </div>
-                            </div>
-                            <div class="extra content">
-                                <span><i class="user icon"></i> 35 incidencias</span>
-                                <span class="right floated">
-                              <div class="ui star rating" data-rating="2"></div>
-                            </span>
-                            </div>
-                        </div>
-                    {% endfor %}
+    <div class="row">
+        <ol class="breadcrumb">
+            <li><a href="{{ path('homepage') }}">Inicio</a></li>
+            <li class="active">Empresas</li>
+        </ol>
+        <h3>Listado de empresas</h3>
+        <span>a continuacion se muestran el listado de las empresas que forman parte de <b>Redforma</b></span>
+        <hr class="separator">
+        {% for company in companies %}
+            <div class="col-sm-4 col-md-3">
+                <div class="thumbnail">
+                    <img src="http://lorempixel.com/400/200?time={{ company.id }}" alt="...">
+                    <div class="caption">
+                        <h3>{{ company.name }}</h3>
+                        <p>{{ company.prettyCategories }}</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Ver incidencias</a>
+                            <span>{{ company.numReviews }} Incidencias</span>
+                        </p>
+                    </div>
                 </div>
-                {# /cards#}
             </div>
-        </div>
-
-    </main>
+        {% endfor %}
+    </div>
 
     {# footer #}
     {% include '_partials/footer.html.twig' %}
