--- a/app/Resources/views/_layouts/base.html.twig
+++ b/app/Resources/views/_layouts/base.html.twig
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
-        <link rel="stylesheet" href="{{ asset('assets/css/app.css') }}">
+<head>
+    <meta charset="UTF-8"/>
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Bienvenido a Redforma</title>
 
-    </head>
-    <body class="{{ bodyClass|default('') }}">
-        <div class="wrapper">
-            {% block body %}{% endblock %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('assets/css/app.css') }}">
+
+</head>
+<body class="{{ bodyClass|default('') }}">
+
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ path('homepage') }}">+</a>
         </div>
-    </body>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.js"></script>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ path('homepage') }}">Incidencias</a></li>
+                <li><a href="{{ path('companies') }}">Empresas</a></li>
+                <li><a href="{{ path('homepage') }}">Categorias</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if not auth.hasIdentity() %}
+                    <li>
+                        <a href="{{ path('login') }}" class="btn btn-default navbar-btn button">Sign in</a>
+                    </li>
+                {% else %}
+                    {% set user = auth.getIdentity() %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">
+                            Hola,<b>&nbsp; {{ user.person.firstName }} {{ user.person.lastName }}
+                            </b>
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Mi cuenta </a></li>
+                            <li><a href="#">Mis Incidencias</a></li>
+                            <li><a href="#">Salir</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <button onclick="location.href='{{ path('logout') }}'" class="btn btn-danger navbar-btn btn-sm">
+                            Salir
+                        </button>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+
+    </div>
+</nav>
+
+<div class="container">
+    {% block body %}{% endblock %}
+</div>
+
+{% include '_partials/footer.html.twig' %}
+<script src="://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
