--- a/app/Resources/views/reviews/user/register.html.twig
+++ b/app/Resources/views/reviews/user/register.html.twig
@@ -1,72 +1,46 @@
 {% extends '_layouts/base.html.twig' %}
 
-{% set bodyClass = 'app-connect' %}
-
 {% block body %}
-    <main class=" user-connect">
-        <div class="ui middle aligned center aligned grid">
-          <div class="column">
-            <h2 class="ui image header">
-              <i class="talk outline icon"></i>
-              <div class="content">
-                Redforma
-              </div>
-            </h2>
-            <form method="POST" class="ui large form {% if form.vars.errors is not empty or not form.vars.valid  %} error {% endif %}" action>
-              <div class="ui noborder segment">
-                <h1>Registrate</h1>
-                <div class="ui error message"></div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <i class="user icon"></i>
-                    {{ form_widget(form.firstName) }}
-                  </div>
-                </div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <i class="user icon"></i>
-                    {{ form_widget(form.lastName) }}
-                  </div>
-                </div>
-                <div class="field">
-                  <div class="ui left icon input">
-                    <i class="user icon"></i>
-                    {{ form_widget(form.email) }}
-                  </div>
-                </div>
-                <div class="two fields">
-                  <div class="field">
-                    <div class="ui left icon input">
-                      <i class="lock icon"></i>
-                      {{ form_widget(form.password.first) }}
-                    </div>
-                  </div>
-                  <div class="field">
-                    <div class="ui left icon input">
-                      <i class="lock icon"></i>
-                      {{ form_widget(form.password.second) }}
-                    </div>
-                  </div>
-                </div>
-                {% if form.vars.errors is not empty or not form.vars.valid %}
-                  <div class="ui error message">
-                    {{ form_errors(form) }}
-                    {{ form_errors(form.password.first) }}
-                  </div>
-                {% endif %}
-                {{ form_end(form) }}
+  <div class="user-form">
+    <legend>Crear Cuenta</legend>
+    {% if form.vars.errors is not empty or not form.vars.valid %}
+      <ul class="forms-error">
+        {{ form_errors(form) }}
+        {{ form_errors(form.password.first) }}
+      </ul>
+    {% endif %}
+    <form class="form-horizontal" method="POST">
+      <div class="form-group">
+        <label>Nombres</label>
+        {{ form_widget(form.firstName, {attr: {'class': 'form-control'}}) }}
+      </div>
+      <div class="form-group">
+        <label>Apellidos</label>
+        {{ form_widget(form.lastName, {attr: {'class': 'form-control'}}) }}
+      </div>
 
-                <button type="submit" class="ui fluid large green submit button">Registrar</button>
-                <div class="ui lostpassword">
-                    <a href="">Olvidé mi contraseña?</a>
-                </div>
-              </div>
-            </form>
+      <div class="form-group">
+        <label>Email</label>
+        {{ form_widget(form.email, {attr: {'class': 'form-control'}}) }}
+      </div>
 
-            <div class="ui transparent message">
-              Ya tienes una cuenta? <a href="{{ path('login') }}">Inicia Sesión</a>
-            </div>
-          </div>
+      <div class="form-group">
+        <label>Password</label>
+        {{ form_widget(form.password.first, {attr: {'class': 'form-control'}}) }}
+      </div>
+
+      <div class="form-group">
+        <label>Password</label>
+        {{ form_widget(form.password.second, {attr: {'class': 'form-control'}}) }}
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-primary">Registrarme</button>
+          <a href="{{ path('login') }}" class="btn btn-default">Iniciar Sesion</a>
         </div>
-    </main>
+      </div>
+      {{ form_end(form) }}
+    </form>
+  </div>
 {% endblock %}
