--- a/app/Resources/views/reviews/home/index.html.twig
+++ b/app/Resources/views/reviews/home/index.html.twig
@@ -4,7 +4,7 @@
     <div class="jumbotron">
         <h1>Hello, world!</h1>
         <p>...</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Registrar Incidencia</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ path('register_review') }}" role="button">Publicar Incidencia </a></p>
     </div>
 
     <h3>Ultimas Incidencias </h3>
