Add api modules

--- a/app/Resources/views/_layouts/base.html.twig
+++ b/app/Resources/views/_layouts/base.html.twig
@@ -68,9 +68,38 @@
 </div>
 
 {% include '_partials/footer.html.twig' %}
-<script src="://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+<script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        // TinyMCE
+        tinymce.init({
+            selector:'textarea',
+            menubar:false,
+            statusbar: false,
+            height: 200
+        });
+
+        // Autocomplete company
+        $('.review-company').typeahead({
+            source: function (query, process) {
+                return $.get('/api/companies/search', {query: query }, function (response) {
+                    return process(response.data);
+                });
+            },
+            updater: function(item) {
+                $('.review-company-id').val(item.id);
+                return item;
+            },
+            autoSelect: true
+        });
+    });
+</script>
+<script>
+</script>
 </body>
 
 </html>
